syntax = "proto3";

import "google/protobuf/empty.proto";

import "health/health.proto";
import "request/plan.proto";
import "response/plan.proto";
import "response/server.proto";
import "request/transaction.proto";
import "response/transaction.proto";

package public;

service PlanController {
  rpc getUsersPlans(plan.request.types.getPlanUser) returns (plan.response.types.getPlans) {}
}

service ServerController {
  rpc getServersByUser(google.protobuf.Empty) returns (server.response.types.getManyServers) {}
}

service TransactionController {
  rpc initTransaction(transaction.request.types.createTransaction) returns (transaction.response.types.createTransaction) {}
}
